fix: addedd wrap for breadcrumbs

--- a/frontend/src/styles/breadscrums.scss
+++ b/frontend/src/styles/breadscrums.scss
@@ -10,6 +10,7 @@
     margin: 0;
     display: flex;
     gap: 0.5rem;
+    flex-wrap: wrap;
   }
   
   .breadcrumbs li {
